--- a/web/app/templates/alerts.html
+++ b/web/app/templates/alerts.html
@@ -5,9 +5,9 @@
 <div class="container my-4">
     <div class="container my-4">
         <!-- Advanced Search Card -->
-        <div class="card mb-4 bg-dark">
-            <div class="card-body">
-                <h4 class="card-title m-0" id="Title">Advanced Search</h4>
+        <div class="card mb-5 bg-dark opacity-75">
+            <div class="card-body mt-0">
+                <!-- <h4 class="card-title m-0 pb-2" id="Title">Advanced Search</h4> -->
                 <form id="advancedSearchForm" class="row g-3">
                     <div class="col-md-3">
                         <label for="startDate" class="form-label">Start Date</label>
@@ -36,7 +36,7 @@
                         </select>
                     </div>
                     <div class="col-md-2 d-flex align-items-end">
-                        <button type="submit" class="btn btn-primary w-100" id="search">Search</button>
+                        <button type="submit" class="btn btn-secondary w-100" id="search">Search</button>
                     </div>
                 </form>
             </div>
@@ -45,7 +45,7 @@
         <!-- Alerts Table -->
         <div class="table-responsive">
             <table class="table table-dark table-bordered table-striped table-alerts">
-                <thead class="table-dark">
+                <thead class="table table-dark opacity-75">
                     <tr>
                         <th scope="col">Timestamp</th>
                         <th scope="col">Source</th>
