--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -59,8 +59,8 @@
                 <br>
                 <br>
             </div>
-            <script src="/static/js/gauge.js" async></script>
-            <script src="/static/js/line.js" async></script>
+            <script src="/static/js/gauge.js"></script>
+            <script src="/static/js/line.js"></script>
             <script src="https://code.highcharts.com/10.3.3/highcharts.js"></script>
             <script src="https://code.highcharts.com/10.3.3/highcharts-more.js"></script>
             <script src="https://code.highcharts.com/10.3.3/modules/solid-gauge.js"></script>
