--- a/web/app/templates/login.html
+++ b/web/app/templates/login.html
@@ -15,7 +15,7 @@
                             <center><input type="text" class="form-control" id="username" name="username" required placeholder="Username"></center>
                         </div>
                         <div class="m-3">
-                            <center><input type="password" class="form-control" id="password" name="password" required placeholder="Password"></center>
+                            <center><input type="password" class="form-control" id="password" name="password" required placeholder="Password" autocomplete="current-password"></center>
                         </div>
                         <center><button type="submit" class="btn m-1">Login</button></center>
                     </form>
