--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -41,11 +41,11 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="lineTimeFrameSelector">
                             <li><a class="dropdown-item" data-value="1h">1 Hour</a></li>
-                            <li><a class="dropdown-item" data-value="3h">3 Hour</a></li>
+                            <li><a class="dropdown-item" data-value="3h">3 Hours</a></li>
                             <li><a class="dropdown-item" data-value="6h">6 Hours</a></li>
                             <li><a class="dropdown-item" data-value="12h">12 Hours</a></li>
-                            <li><a class="dropdown-item" data-value="1d">24 Hours</a></li>
-                            <li><a class="dropdown-item" data-value="2d">48 Hours</a></li>
+                            <li><a class="dropdown-item" data-value="1d">1 Day</a></li>
+                            <li><a class="dropdown-item" data-value="2d">2 Days</a></li>
                         </ul>
                         </div>
                     </div>
