--- a/web/app/templates/alerts.html
+++ b/web/app/templates/alerts.html
@@ -60,8 +60,8 @@
         </div>
     </div>
     <div class="text-center">
-        <button id="loadMoreBtn" class="btn btn-secondary" style="display: none;">Load More</button>
-        <button id="resetBtn" class="btn btn-secondary" style="display: none;">Reset</button>
+        <button id="loadMoreBtn" class="btn btn-secondary">Load More</button>
+        <button id="resetBtn" class="btn btn-secondary">Reset</button>
     </div>
 </div>
 <script src="/static/js/alerts.js"></script>
