--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -55,7 +55,15 @@
                 <span> © 2024 Covert Law Enforcement. All Rights Reserved | Support: (435)-565-6018</span>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/highcharts.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/highcharts-more.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/modules/solid-gauge.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/modules/boost.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/modules/accessibility.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/modules/exporting.js"></script>
+        <script src="https://code.highcharts.com/10.3.3/modules/export-data.js"></script>
     </div>
   </body>
 </html>
